syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Application";

package proto;


message ItemP{
    string name=1;
    double price = 2;
}

service ItemService {
    rpc postItem(ItemP) returns (ItemP){};
}